<resources>
    <string name="app_name">OTAMS</string>
    <string name="student_form">Student Form</string>
    <string name="tutor_form">Tutor Form</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="program_hint">Program of Study</string>
    <string name="client_info">Information Page</string>
    <string name="accept_hint">Accept Request</string>
    <string name="decline_hint">Decline Request</string>
    <string-array name="degree_array">
        <item>None</item>
        <item>High school</item>
        <item>Bachelors</item>
        <item>Masters</item>
        <item>Doctorate</item>
    </string-array>
    <string-array name="fields_array">
        <item>Science</item>
        <item>Engineering</item>
        <item>Mathematics</item>
        <item>Medicine</item>
        <item>Art</item>
        <item>Business</item>
        <item>None</item>
    </string-array>
    <string name="apply_button">Apply</string>
    <string name="view_upcoming_button">View Upcoming</string>
    <string name="view_availability_button">View Availability</string>
    <string name="add_availability_button">Add Availability</string>
    <string name="weekly_view_button">Weekly View</string>
    <string name="monthly_view_button">Monthly View</string>
    <string name="daily_view_button">Daily View</string>
    <string name="homepage_button">Return to Homepage</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
</resources>